# kaggle

./: pyproject.toml
titanic/: submission.csv  titanic.ipynb
