[tool.poetry]
name = "kaggle"
version = "0.1.0"
description = ""
authors = ["Ethan <echavemann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lightgbm = "^4.2.0"
pandas = "^2.1.4"
numpy = "^1.26.3"
optuna = "^3.5.0"
scikit-learn = "^1.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
